# etl-refiner

./: .gitignore  README.md  main.py  pyproject.toml
configs/: sample.toml
sql/: schema.sql
src/pipeline/: data_refiner.py  dispatchers.py  state.py
tests/: test_benchmark.py  test_data_fefiner.py  test_integration.py  test_state.py
